# NeoForge

./: .gitattributes  .gitignore  .ignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  clippy.toml  diesel.toml  forge.schema.json  insta.yaml  package-lock.json  package.json  rust-analyzer.toml  vertex.json
.config/: nextest.toml
crates/forge_display/: Cargo.toml
crates/forge_display/src/: code.rs  diff.rs  grep.rs  lib.rs  markdown.rs
crates/forge_display/src/fixtures/: code-01.md  code-02.md
crates/forge_display/src/snapshots/: forge_display__diff__tests__diff_printer_simple_diff.snap  forge_display__diff__tests__file_source.snap  forge_display__diff__tests__width_based_on_diff_not_file_size.snap  forge_display__grep__tests__combined_grep_suite.snap
crates/forge_json_repair/: Cargo.toml
crates/forge_json_repair/src/: error.rs  lib.rs  parser.rs  schema_coercion.rs
crates/forge_json_repair/tests/: comments_unicode.rs  complex_repairs.rs  error_cases.rs  escaping.rs  numbers.rs  punctuation.rs  quotes.rs  special_quotes.rs  special_values.rs  strings.rs  truncation.rs  valid_json.rs
crates/forge_markdown_stream/: Cargo.toml
crates/forge_markdown_stream/src/: code.rs  heading.rs  inline.rs  lib.rs  list.rs  renderer.rs  repair.rs  style.rs  table.rs  theme.rs  utils.rs
crates/forge_markdown_stream/src/snapshots/: forge_markdown_stream__table__tests__all_empty_cells.snap  forge_markdown_stream__table__tests__cell_with_bold_tag.snap  forge_markdown_stream__table__tests__cell_with_code_tag.snap  forge_markdown_stream__table__tests__cell_with_html_like_tags.snap  forge_markdown_stream__table__tests__cell_with_italic_tag.snap  forge_markdown_stream__table__tests__cell_with_link_tag.snap  forge_markdown_stream__table__tests__cell_with_mixed_tags.snap  forge_markdown_stream__table__tests__cell_with_nested_tags.snap  forge_markdown_stream__table__tests__custom_margin.snap  forge_markdown_stream__table__tests__empty_cells.snap  forge_markdown_stream__table__tests__header_with_tags.snap  forge_markdown_stream__table__tests__long_content_in_cells.snap  forge_markdown_stream__table__tests__long_content_with_tags_wrapping.snap  forge_markdown_stream__table__tests__many_rows.snap  forge_markdown_stream__table__tests__multiline_content_wrapping.snap  forge_markdown_stream__table__tests__narrow_first_col_not_padded.snap  forge_markdown_stream__table__tests__narrow_width_shrinks_columns.snap  forge_markdown_stream__table__tests__no_margin.snap  forge_markdown_stream__table__tests__numeric_content.snap  forge_markdown_stream__table__tests__real_world_table_with_all_formatting.snap  forge_markdown_stream__table__tests__simple_table.snap  forge_markdown_stream__table__tests__single_cell.snap  forge_markdown_stream__table__tests__single_column_many_rows.snap  forge_markdown_stream__table__tests__single_row_header_only.snap  forge_markdown_stream__table__tests__special_characters.snap  forge_markdown_stream__table__tests__three_columns.snap  (+7 more)
crates/forge_select/: Cargo.toml  README.md
crates/forge_select/src/: confirm.rs  input.rs  preview.rs  select.rs
crates/forge_select/tests/: highlight_test.rs  input_test.rs  preview_test.rs  select_test.rs
crates/forge_snaps/: Cargo.toml
crates/forge_snaps/src/: lib.rs  service.rs
crates/forge_test_kit/: Cargo.toml
crates/forge_test_kit/src/: lib.rs
crates/forge_walker/: Cargo.toml
crates/forge_walker/src/: binary_extensions.txt  lib.rs
(+725 files in other folders)
