[package]
name = "forge_markdown_stream"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "forge_markdown_stream"
path = "src/lib.rs"

[dependencies]
streamdown-parser = "0.1.4"
streamdown-core = "0.1.4"
streamdown-ansi = "0.1.4"
streamdown-render = "0.1.4"
syntect.workspace = true
colored.workspace = true
unicode-width = "0.2"
unicode-segmentation = "1.12"
terminal-colorsaurus = "1.0.3"

[dev-dependencies]
insta.workspace = true
strip-ansi-escapes.workspace = true
pretty_assertions.workspace = true
