[package]
name = "forge_snaps"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
forge_fs.workspace = true
fnv_rs.workspace = true
serde.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono.workspace = true
tokio = { workspace = true }

forge_domain.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
tempfile.workspace = true