[package]
name = "forge_walker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
ignore.workspace = true
tokio.workspace = true
anyhow.workspace = true
derive_setters.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true